Add links to user and shout

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -5,9 +5,5 @@
   <%= form.submit "Shout!" %>
 <% end %>
 
-<% @shouts.each do |shout| %>
-  <div>
-    <%= shout.body %>
-  <div>
-<% end %>
+<%= render @shouts %>
 
